[gd_scene load_steps=11 format=3 uid="uid://cnekhgng88e36"]

[ext_resource type="Script" uid="uid://bjoybd3tekutd" path="res://board.gd" id="1_8lpg8"]
[ext_resource type="TileSet" uid="uid://bd4h715agxc40" path="res://CardsTileSet.tres" id="2_xhrpu"]
[ext_resource type="Script" uid="uid://b7xhq2koqbqoi" path="res://available_tiles.gd" id="3_nk23n"]
[ext_resource type="Script" uid="uid://dvbts1548s0ej" path="res://PlayerHand.gd" id="4_nk23n"]
[ext_resource type="PackedScene" uid="uid://7nus6x8j4goo" path="res://InfoArea.tscn" id="4_xewae"]
[ext_resource type="AudioStream" uid="uid://cafg1ghew25px" path="res://audio/cardPlace1.ogg" id="5_tg5pk"]
[ext_resource type="AudioStream" uid="uid://doelc3wgcj8lk" path="res://audio/confirmation_004.ogg" id="6_rka2n"]
[ext_resource type="AudioStream" uid="uid://bdh08wb1ycsfb" path="res://audio/error_002.ogg" id="7_h5cha"]
[ext_resource type="AudioStream" uid="uid://dj2htqdsnyu04" path="res://audio/jingles_NES00.ogg" id="8_jmibl"]
[ext_resource type="AudioStream" uid="uid://cdw08cd7ewba6" path="res://audio/jingles_HIT01.ogg" id="9_y5hy7"]

[node name="Board" type="Node2D"]
script = ExtResource("1_8lpg8")

[node name="AvailableTiles" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(216, 144)
tile_set = ExtResource("2_xhrpu")
script = ExtResource("3_nk23n")

[node name="CurrentPlayerHand" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(444, 587)
tile_set = ExtResource("2_xhrpu")
script = ExtResource("4_nk23n")

[node name="OpponentHand" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(429, 10)
tile_set = ExtResource("2_xhrpu")
script = ExtResource("4_nk23n")
isCurrentPlayer = false

[node name="InfoArea" parent="." instance=ExtResource("4_xewae")]
offset_left = 770.0
offset_top = 4.0
offset_right = 1151.0
offset_bottom = 648.0

[node name="PickedCardOverviewPosition" type="Node2D" parent="."]
position = Vector2(68, 460)

[node name="OpponentPickedCardOverviewPosition" type="Node2D" parent="."]
position = Vector2(74, 153)

[node name="GuessACardHUD" type="Node2D" parent="."]

[node name="GuessTheNumberInput" type="TextEdit" parent="GuessACardHUD"]
offset_left = 20.0
offset_top = 128.0
offset_right = 143.0
offset_bottom = 164.0
placeholder_text = "put a number"

[node name="GuessButton" type="Button" parent="GuessACardHUD"]
offset_left = 43.0
offset_top = 194.0
offset_right = 115.0
offset_bottom = 230.0
text = "Guess"

[node name="DecideWhatToDoAfterASuccessfulGuessHUD" type="Node2D" parent="."]

[node name="KeepGuessingButton" type="Button" parent="DecideWhatToDoAfterASuccessfulGuessHUD"]
offset_left = 23.0
offset_top = 379.0
offset_right = 165.0
offset_bottom = 410.0
text = "Guess once more"

[node name="StopYourTurnButton" type="Button" parent="DecideWhatToDoAfterASuccessfulGuessHUD"]
offset_left = 26.0
offset_top = 330.0
offset_right = 147.0
offset_bottom = 361.0
text = "Stop your turn"

[node name="GameOverStatus" type="Label" parent="."]
offset_left = 123.0
offset_top = 200.0
offset_right = 1076.0
offset_bottom = 337.0
theme_override_colors/font_color = Color(0.827451, 0, 0, 1)
theme_override_font_sizes/font_size = 100

[node name="Audio" type="Node" parent="."]

[node name="PickedCard" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_tg5pk")

[node name="SuccessfulGuess" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_rka2n")

[node name="FailedGuess" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_h5cha")

[node name="GameOverLost" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_jmibl")

[node name="GameOverWon" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_y5hy7")

[connection signal="cardDrawn" from="AvailableTiles" to="." method="on_card_drawn"]
[connection signal="cardAdded" from="CurrentPlayerHand" to="." method="on_card_added_to_player_hand"]
[connection signal="cardAdded" from="OpponentHand" to="." method="on_card_added_to_player_hand"]
[connection signal="selectedCard" from="OpponentHand" to="." method="on_selected_opponent_card"]
[connection signal="pressed" from="GuessACardHUD/GuessButton" to="." method="on_guess_button_pressed"]
[connection signal="pressed" from="DecideWhatToDoAfterASuccessfulGuessHUD/KeepGuessingButton" to="." method="on_keep_guessing_button_pressed"]
[connection signal="pressed" from="DecideWhatToDoAfterASuccessfulGuessHUD/StopYourTurnButton" to="." method="on_stop_your_turn_button_pressed"]
